# footballp_tracker

./: .gitignore  .gitmodules  HOWTORUN.md  README.md  export_ball_trail_video.py  gsr_adapter.py  main.py  main_streaming.py  promote.txt  pyproject.toml  requirements.txt  track_test.py  utils_stream.py  yolo_inference.py
.misc/: 2d_heatheat_map_ball.txt  booststracks.py  promote_heatmap2d.txt  requirements.txt  yolo_inference.py
.misc/OldBallAction/: __init__.py  model.py
.misc/development_and_analysis/: color_assignments.ipynb
.misc/training/: football_training_yolo_v5l_cl.ipynb
BallAction/: Test_Visual.py  __init__.py  model.py  visual.py
BallAction/src/: __init__.py  argus_models.py  predictors.py
BoT-SORT/: requirements.txt
FieldMarkings/: requirements.txt  run.py
ball_tracker/: __init__.py  ball_tracker.py
camera_movement_estimator/: camera_movement_estimator.py
development_and_analysis/: ball_heatmap_review.md  color_assignments.ipynb  heatmap_flow_review.md
ocr/: jersey_recognizer.py
parseq/: .git-blame-ignore-revs  NOTICE  README.md  bench.py  hubconf.py  predict_video.py  read.py  test.py  train.py  tune.py
pipeline/: __init__.py  ball.py  config.py  jersey.py  overlays.py  pipeline.py
reid/: __init__.py  torchreid_interface.py
stubs/: track_stubs.pkl
team_assigner/: team_assigner.py
trackers/: tracker.py  tracker_pending.py
training/: football_training_yolo_v5.ipynb
utils/: __init__.py  bbox_utils.py  export_ball_trail_video.py  video_utils.py
view_transformer/: __init__.py  minimap.py  view_transformer.py
(+198 files in other folders)
